tests/machine/x/pascal/group_items_iteration.error
fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/group_items_iteration.pas
group_items_iteration.pas(14,67) Error: Type identifier expected
group_items_iteration.pas(14,67) Fatal: Syntax error, ")" expected but "FUNCTION" found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
